--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,234 +1,125 @@
 body {
-  font-family: "Yugioh", serif;
-  background-image: url("../imgs/fundo-site.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  background-color: #000000;
+  overflow: hidden;
+}
+
+main::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
   min-height: 100vh;
-  gap: 30px;
+  width: 80vh;
+  background: linear-gradient(92deg, #000 25%, rgba(0, 0, 0, 0) 75%) no-repeat;
 }
 
-.cabecalho {
-  display: flex;
-  justify-content: center;
+main .personagem {
+  display: none;
+  height: 100vh;
 }
 
-.cabecalho .titulo {
-  color: #f1ecff;
+main .personagem.selecionado {
+  display: block;
 }
 
-.cartao {
-  opacity: 0;
+main .personagem .imagem {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.conteudo {
+  position: absolute;
+  top: 0;
+  left: 120px;
   display: flex;
   flex-direction: column;
-  padding: 12px;
-  gap: 5px;
-  position: absolute;
-}
-
-.cartao.selecionado {
-  opacity: 1;
+  justify-content: center;
+  height: 100vh;
+  max-width: 380px;
   z-index: 1;
 }
 
-.lista-personagens {
-  width: 300px;
-  height: 500px;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  position: relative;
-  padding: 12px;
+.conteudo .nome-personagem {
+  color: #ffffff;
+  font-size: 48px;
+  font-family: "Secular One";
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
-.slider {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 130px;
+.conteudo .descricao {
+  color: #ffffff;
+  font-family: "Rubik";
+  font-size: 16px;
+  line-height: 24px;
 }
 
-.cartao .nome {
-  font-size: 13px;
-  padding: 5px;
-  text-transform: uppercase;
-  background: radial-gradient(circle, #f3e2c8, #e4cfa5, #c4a57a);
-  border: 2px solid #a67c52;
-  text-align: left;
-  line-height: 1.5;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-}
-
-.cartao .estrela {
-  width: 20px;
-  height: 20px;
-  background-image: url("../imgs/nivel-carta.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  display: inline-block;
-}
-
-.cartao .nivel-carta {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 10px;
-  gap: 5px;
-}
-
-.cartao .imagem-carta {
-  max-width: 260px;
-  align-self: center;
-}
-
-.cartao .info {
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  max-width: 300px;
-  color: #000000;
-  background: radial-gradient(circle, #f3e2c8, #e4cfa5, #c4a57a);
-  border: 2px solid #a67c52;
-  text-align: left;
-  line-height: 1.5;
-}
-
-.cartao .info .info-ataque {
-  display: flex;
-  justify-content: flex-end;
-  gap: 5px;
-  padding: 10px;
-}
-
-.cartao .info .info-ataque span {
-  font-size: 13px;
-}
-
-.cartao .info .descricao {
-  border-bottom: 1px solid #000000;
-  padding: 10px;
-  max-height: 95px;
-  overflow-y: scroll;
-  font-size: 13px;
-}
-
-.fundo-1 {
-  background: url("../imgs/fundo-1.jpg") no-repeat;
-}
-.fundo-2 {
-  background: url("../imgs/fundo-2.jpg") no-repeat;
-}
-.fundo-3 {
-  background: url("../imgs/fundo-3.jpg") no-repeat;
-}
-.fundo-4 {
-  background: url("../imgs/fundo-4.jpg") no-repeat;
-}
-.fundo-5 {
-  background: url("../imgs/fundo-5.jpg") no-repeat;
-}
-.fundo-6 {
-  background: url("../imgs/fundo-6.jpg") no-repeat;
-}
-.fundo-7 {
-  background: url("../imgs/fundo-7.jpg") no-repeat;
-}
-
-.btn-seta {
-  background-color: #ffffff;
-  width: 70px;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  -o-border-radius: 50px;
-  border: 0;
-  cursor: pointer;
-  transition: background-color 0.3 ease-in-out;
-  -webkit-transition: background-color 0.3 ease-in-out;
-  -moz-transition: background-color 0.3 ease-in-out;
-  -ms-transition: background-color 0.3 ease-in-out;
-  -o-transition: background-color 0.3 ease-in-out;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.btn-seta.btn-voltar {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-}
-
-.btn-seta:hover {
-  background-color: #8351fe;
-}
-
-body::-webkit-scrollbar-track {
-  background-color: #c08057;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #c08057;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #c08057;
-}
-
-.carta-virada{
-  display: none;
-}
-
-.carta-virada.mostrar-fundo-carta{
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: url("../imgs/fundo-carta.jpg");
-  background-size: cover;
-  background-position: center;
+.botoes {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
   top: 0;
-  left: 0;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  z-index: 2;
+  right: 0;
+  width: 180px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  gap: 16px;
 }
 
-.cartao.virar{
-  transform: rotateZ(90deg);
-  -webkit-transform: rotateZ(90deg);
-  -moz-transform: rotateZ(90deg);
-  -ms-transform: rotateZ(90deg);
-  -o-transform: rotateZ(90deg);
-  transition: transform 0.3s ease-in-out;
-  -webkit-transition: transform 0.3s ease-in-out;
-  -moz-transition: transform 0.3s ease-in-out;
-  -ms-transition: transform 0.3s ease-in-out;
-  -o-transition: transform 0.3s ease-in-out;
+.botoes .botao {
+  border: none;
+  background-color: #000000;
+  width: 90px;
+  height: 90px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  -webkit-transition: transform 0.3s ease;
+  -moz-transition: transform 0.3s ease;
+  -ms-transition: transform 0.3s ease;
+  -o-transition: transform 0.3s ease;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
-.esconder{
-  display: none;
+.botoes .botao img {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.botoes .botao.selecionado {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  box-shadow: 0 0 10px #d9d9d9;
+}
+
+.botoes .botao.cyberstorm.selecionado {
+  box-shadow: 0 0 10px #47FFC5;
+}
+
+.botoes .botao.codepixie.selecionado {
+  box-shadow: 0 0 10px #9747FF;
+}
+
+.botoes .botao.hexblade.selecionado {
+  box-shadow: 0 0 10px #FFA947;
+}
+
+.botoes .botao.neonpulse.selecionado {
+  box-shadow: 0 0 10px #E4309A;
+}
+
+.botoes .botao.codebreaker.selecionado {
+  box-shadow: 0 0 10px #FFF047;
 }
