--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,48 +1,66 @@
 @media(max-width: 768px){
-    body{
-        background-position: center;
-        padding: 0 15px;
+    main::after{
+        width: 100vw;
+        background: linear-gradient(0deg, #000 45%, rgba(0, 0, 0, 0) 70%) no-repeat;
+    }
+    main .personagem .imagem{
+        height: 85%;
+        object-position: center;
     }
 
-    .slider{
-        gap: 10px;
+    .conteudo{
+        justify-content: flex-end;
+        left: 0;
+        top: -20%;
+        max-width: 100vw;
+        padding: 30px;
     }
-}
 
-@media(max-width: 496px){
-    .lista-personagens{
-        width: 250px;
+    .conteudo .nome-personagem{
+        font-size: 30px;
     }
-    .imagem-carta{
+
+    .conteudo .descricao{
+        max-width: 500px;
+    }
+
+    .botoes{
+        flex-direction: row;
+        align-items: flex-end;
         width: 100%;
+        padding: 30px;
     }
 
-    .slider{
-        position: relative;
+    .botoes .botao{
+        width: 70px;
+        height: 70px;
     }
 
-    .btn-seta{
-        position: absolute;
-        bottom: -13%;
-    }
-
-    #btnAvancar{
-        right: 20%;
-    }
-
-    #btnVoltar{
-        left: 20%;
+    .botoes .botao img{
+        max-width: 70px;
     }
 }
 
-@media(max-width: 375px){
-    body{
-        justify-content: start;
-        padding-top: 10px;
-        gap: 10px;
+@media(max-width: 425px){
+    main .personagem .imagem{
+        height: auto;
     }
 
-    .cabecalho{
-        font-size: 12px;
+    .conteudo{
+        top: -20%;
+    }
+
+    .botoes{
+        padding: 20px;
+        top: -10%;
+    }
+
+    .botoes .botao{
+        width: 50px;
+        height: 50px;
+    }
+
+    .botoes .botao img{
+        max-width: 50px;
     }
 }
